Search again button z-index fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,10 +50,10 @@ h1 {
 }
 
 .carousel {
-	min-height: 1000px;
+	min-height: 700px;
 	z-index: 5;
 	position: relative;
-	bottom: 400px;
+	bottom: 200px;
 	right: 100px;
 }
 
@@ -110,6 +110,7 @@ h1 {
 
 #search-again {
 	text-align: center;
+	z-index: 20;
 }
 
 #music-holder {
